--- a/compiler/Cargo.toml
+++ b/compiler/Cargo.toml
@@ -5,3 +5,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
+regex = "1.10.6"
+
+# Add a build-time dependency on the lalrpop library:
+[build-dependencies]
+lalrpop = "0.20.2"
